--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chai": "^4.1.2",
+    "colors": "^1.1.2",
     "koa": "^2.4.1",
+    "koa-bodyparser": "^4.2.0",
     "koa-router": "^7.3.0",
     "koa-static": "^4.0.2",
-    "mysql": "^2.15.0"
+    "koa2-cors": "^2.0.5",
+    "mocha": "^4.1.0",
+    "mysql2": "^1.5.1",
+    "sequelize": "^4.30.2"
   }
 }
