--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "colors": "^1.1.2",
     "koa": "^2.4.1",
     "koa-bodyparser": "^4.2.0",
+    "koa-connect-history-api-fallback": "^0.3.1",
     "koa-router": "^7.3.0",
     "koa-static": "^4.0.2",
     "koa2-cors": "^2.0.5",
