--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^1.0.3",
     "chai": "^4.1.2",
     "colors": "^1.1.2",
     "koa": "^2.4.1",
     "koa-bodyparser": "^4.2.0",
     "koa-connect-history-api-fallback": "^0.3.1",
     "koa-router": "^7.3.0",
+    "koa-session": "^5.8.1",
     "koa-static": "^4.0.2",
     "koa2-cors": "^2.0.5",
     "mocha": "^4.1.0",
