--- a/static/blog/package.json
+++ b/static/blog/package.json
@@ -10,6 +10,9 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "assert": "^1.4.1",
+    "chai": "^4.1.2",
+    "mocha": "^5.0.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
